# skyctr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gitsub.bat  main.cpp  meson_parser.sh  test.bat
examples/: CMakeLists.txt  generator.bat  json_parsefile.cc
examples/data/meson/glib/: meson.build
examples/data/meson/glib/subdir/: meson.build
examples/data/meson/mediasoup/: meson.build
examples/data/vcxproj/: 2015Remote.sln  2015Remote.vcxproj  2015Remote_vs2015.vcxproj  EncodeAudio.vcxproj  tinyxml2.vcxproj
examples/data/xml/: framelayout.xml  grid.xml
src/: ConvertorStruct.h  convertor_struct.cc  convertor_struct.h  convertor_struct.hpp  skyctr_bazel_parser.hpp  skyctr_cmake_generator.cc  skyctr_cmake_generator.hpp  skyctr_core.hpp  skyctr_factory.cc  skyctr_factory.hpp  skyctr_generator.hpp  skyctr_logger.hpp  skyctr_make_parser.hpp  skyctr_manager.cc  skyctr_manager.hpp  skyctr_meson_parser.cc  skyctr_meson_parser.hpp  skyctr_ninja_parser.hpp  skyctr_parser.hpp  skyctr_stack.hpp  skyctr_str_util.hpp  skyctr_vcxproj_parser.cc  skyctr_vcxproj_parser.hpp  skyctr_xml_parser.cc  skyctr_xml_parser.hpp
